--- a/public/application.css
+++ b/public/application.css
@@ -1,3 +1,4 @@
 @import "./assets/css/reset.css";
+@import "./assets/css/drum_boy.css";
 @import "./assets/css/row.css";
 @import "./assets/css/step.css";
