Add step progress bar

--- a/public/application.css
+++ b/public/application.css
@@ -2,3 +2,4 @@
 @import "./assets/css/drum_boy.css";
 @import "./assets/css/row.css";
 @import "./assets/css/step.css";
+@import "./assets/css/step_bar.css";
