--- a/public/assets/css/drum_boy.css
+++ b/public/assets/css/drum_boy.css
@@ -3,3 +3,15 @@
   margin: 0 auto;
 }
 
+.main {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+}
+
