--- a/public/assets/css/sound_controls.css
+++ b/public/assets/css/sound_controls.css
@@ -1,7 +1,18 @@
 .sound-controls {
   display: flex;
+  position: relative;
   width: 30%;
   min-width: 300px;
   padding: 10px;
   background: green;
 }
+
+.master-volume { 
+  position: absolute;
+  top: -17px;
+  left: 0px;
+}
+
+/* .mute-button {
+
+} */
