Add first wildcard

--- a/public/assets/css/wildcards.css
+++ b/public/assets/css/wildcards.css
@@ -1,6 +1,13 @@
 .wildcards {
+  display: flex;
   width: 100%;
   height: 50px;
   padding: 5px 10px;
   background: blue;
+}
+
+.wildcard {
+  width: 30px;
+  height: 30px;
+  background: olivedrab;
 }
