Add basic instructions modal

--- a/public/application.css
+++ b/public/application.css
@@ -1,4 +1,5 @@
 @import "./assets/css/reset.css";
+@import "./assets/css/instructions.css";
 @import "./assets/css/drum_boy.css";
 @import "./assets/css/logo_and_buttons.css";
 @import "./assets/css/oscilloscope.css";
