--- a/public/assets/css/drum_boy.css
+++ b/public/assets/css/drum_boy.css
@@ -6,11 +6,12 @@ body {
   width: 80%;
   max-width: 1200px;
   min-width: 1024px;
-  margin: 20px auto;
-  padding: 20px;
-  background: orange;
+  margin: 5px auto;
+  padding: 30px;
+  background: black;
   box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
   border-radius: 5px;
+  color: white;
 }
 
 .main {
