--- a/public/assets/css/logo_and_buttons.css
+++ b/public/assets/css/logo_and_buttons.css
@@ -1,3 +1,5 @@
+@import "https://fonts.googleapis.com/css?family=Faster+One&display=swap";
+
 .logo-and-buttons {
   position: relative;
   width: 30%;
@@ -5,11 +7,12 @@
   min-width: 300px;
   padding: 10px;
   border-radius: 5px;
-  background: green;
+  background: rgb(143, 97, 230);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  font-family: 'Aldrich', sans-serif;
 }
 
 .logo-and-color {
@@ -18,8 +21,10 @@
 }
 
 .main-heading {
+  font-family: 'Faster One', cursive;
+  color: black;
   font-size: 24px;
-  font-weight: 700;
+  /* font-weight: 700; */
 }
 
 .advance {
@@ -42,7 +47,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: palegreen;
+  background-color: black;
   font-size: 12px;
   text-align: center;
   display: flex;
@@ -50,8 +55,26 @@
   align-items: center;
 }
 
+.bpm-select {
+  font-family: 'Aldrich', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  text-align: center;
+}
+
 .color-select {
   position: absolute;
+  font-family: 'Aldrich', sans-serif;
   top: -19px;
   left: 0px;
+}
+
+.fa-pause {
+  color: rgb(143, 97, 230);
+  color: white;
+} 
+
+.fa-play {
+  color: rgb(143, 97, 230);
+  color: white;
 }
