--- a/public/assets/css/sound_controls.css
+++ b/public/assets/css/sound_controls.css
@@ -5,6 +5,8 @@
   min-width: 300px;
   padding: 10px;
   background: green;
+  background: rgb(143, 97, 230);
+  border-radius: 5px;
 }
 
 .master-volume { 
