--- a/public/assets/css/step.css
+++ b/public/assets/css/step.css
@@ -1,11 +1,17 @@
 .step {
+  box-sizing: border-box;
   width: 50px;
   height: 50px;
   border-radius: 5px;
-  background: hotpink;
+  background:rgb(143, 97, 230, 0.6);
+  background: gray;
   margin: 10px;
+  border: 3px solid rgb(143, 97, 230, 0.6);
+  border-style: outset;
 }
 
 .selected {
-  background: purple;
+  background: rgb(143, 97, 230);
+  border-style: inset;
+  /* filter: brightness(150%); */
 }
