--- a/public/assets/css/wildcards.css
+++ b/public/assets/css/wildcards.css
@@ -1,14 +1,21 @@
 .wildcards {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   height: 50px;
   padding: 5px 10px;
-  background: blue;
+  background: gray;
+  border: 2px solid rgb(53, 53, 53);
+  border: 2px solid rgb(143, 97, 230);
 }
 
 .wildcard {
-  width: 30px;
-  height: 30px;
-  background: olivedrab;
+  font-family: 'Aldrich', sans-serif;
+  /* width: 30px;
+  height: 30px; */
+}
+
+.active-effect {
+  color: rgb(143, 97, 230);
 }
