--- a/public/assets/css/instructions.css
+++ b/public/assets/css/instructions.css
@@ -1,3 +1,6 @@
+/* @import "https://fonts.googleapis.com/css?family=Faster+One&display=swap"; */
+
+
 .instruction-button {
   position: absolute;
   top: 10px;
@@ -19,13 +22,51 @@
 }
 
 .instructions {
-  position: absolute;
+  position: fixed;
   z-index: 100;
-  background: blue;
+  background: rgb(94, 94, 94);
+  /* background: rgb(143, 97, 230); */
+  border: 2px solid black;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 650px;
   height: 350px;
   border-radius: 5px;
+  display: flex; 
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
+
+.instructions-header {
+  font-family: 'Aldrich', sans-serif;
+  font-family: 'Faster One', cursive;
+  font-size: 34px;
+  text-align: center;
+  margin: 20px 0;
+  color: black;
+}
+
+.fa-times {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+}
+
+.bullet-points {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: 'Aldrich', sans-serif;
+  font-size: 16px;
+  height: 250px;
+  width: 90%;
+}
+
+.bullet-points li {
+  list-style-type: disc;
+  font-family: 'Aldrich', sans-serif;
+  text-align: center;
+} 
