Add mobile modal

--- a/public/assets/css/drum_boy.css
+++ b/public/assets/css/drum_boy.css
@@ -27,3 +27,27 @@ body {
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 1023px) {
+  .drum-boy {
+    display: none;
+  }
+
+  .samples {
+    display: none;
+  }
+
+  .instruction-button {
+    display: none;
+  }
+
+  .instructions {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .mobile {
+    display: none;
+  }
+}
+
