--- a/public/assets/css/logo_and_buttons.css
+++ b/public/assets/css/logo_and_buttons.css
@@ -70,6 +70,10 @@
   left: 0px;
 }
 
+.logo-and-buttons.sparks {
+  background: rgb(231, 133, 41);
+}
+
 @media not all and (min-resolution:.001dpcm) { 
   .color-select {
     top: -24px;
