--- a/public/assets/css/wildcards.css
+++ b/public/assets/css/wildcards.css
@@ -6,8 +6,8 @@
   height: 50px;
   padding: 5px 10px;
   background: gray;
-  border: 2px solid rgb(53, 53, 53);
   border: 2px solid rgb(143, 97, 230);
+  border-radius: 5px;
 }
 
 .wildcard {
@@ -31,4 +31,12 @@
   border: 2px solid black;
   /* border-style: inset; */
   background: rgb(143, 97, 230)
+}
+
+.wildcards.sparks {
+  border: 1px solid rgb(231, 133, 41);
+}
+
+.sparks.active-effect {
+  background: rgb(231, 133, 41);
 }
