--- a/public/assets/css/logo_and_buttons.css
+++ b/public/assets/css/logo_and_buttons.css
@@ -74,6 +74,10 @@
   background: rgb(231, 133, 41);
 }
 
+.logo-and-buttons.dokidoki {
+  background: rgb(248, 103, 131);
+}
+
 @media not all and (min-resolution:.001dpcm) { 
   .color-select {
     top: -24px;
