--- a/public/assets/css/sound_controls.css
+++ b/public/assets/css/sound_controls.css
@@ -82,6 +82,10 @@
   background: rgb(231, 133, 41);
 }
 
+.sound-controls.dokidoki {
+  background: rgb(248, 103, 131);
+}
+
 /* slider styles */
 input[type=range] {
   -webkit-appearance: none;
@@ -187,14 +191,28 @@ input[type=range].master-volume::-webkit-slider-runnable-track {
 
 /* color schemes */
 
+/* sparks */
 input[type=range].sparks::-webkit-slider-thumb {
   background: rgb(179, 94, 14);
 }
 
-input[type=range]::-moz-range-thumb {
+input[type=range].sparks::-moz-range-thumb {
   background: rgb(179, 94, 14);
 }
 
-input[type=range]::-ms-thumb {
+input[type=range].sparks::-ms-thumb {
   background: rgb(179, 94, 14);
+}
+
+/* doki doki */
+input[type=range].dokidoki::-webkit-slider-thumb {
+  background: rgb(192, 63, 89);
+}
+
+input[type=range].dokidoki::-moz-range-thumb {
+  background: rgb(192, 63, 89);
+}
+
+input[type=range].dokidoki::-ms-thumb {
+  background: rgb(192, 63, 89);
 }
