--- a/public/assets/css/step.css
+++ b/public/assets/css/step.css
@@ -21,4 +21,15 @@
 
 .selected.sparks {
   background: rgb(231, 133, 41);
+  border-style: inset;
+}
+
+.step.dokidoki {
+  border: 3px solid rgb(248, 103, 131, 0.6);
+  border-style: outset;
+}
+
+.selected.dokidoki {
+  background: rgb(248, 103, 131);
+  border-style: inset;
 }
