--- a/public/assets/css/logo_and_buttons.css
+++ b/public/assets/css/logo_and_buttons.css
@@ -78,6 +78,14 @@
   background: rgb(248, 103, 131);
 }
 
+.logo-and-buttons.free {
+  background: rgb(71, 209, 222);
+}
+
+.logo-and-buttons.hxh {
+  background: rgb(81, 145, 78);
+}
+
 @media not all and (min-resolution:.001dpcm) { 
   .color-select {
     top: -24px;
