--- a/assets/css/step.css
+++ b/assets/css/step.css
@@ -3,7 +3,6 @@
   width: 50px;
   height: 50px;
   border-radius: 5px;
-  background:rgb(143, 97, 230, 0.6);
   background: gray;
   margin: 10px;
   border: 3px solid rgb(143, 97, 230, 0.6);
@@ -12,5 +11,45 @@
 
 .selected {
   background: rgb(143, 97, 230);
+  border-style: inset;
+}
+
+.step.sparks {
+  border: 3px solid rgb(231, 133, 41, 0.6);
+  border-style: outset;
+}
+
+.selected.sparks {
+  background: rgb(231, 133, 41);
+  border-style: inset;
+}
+
+.step.dokidoki {
+  border: 3px solid rgb(248, 103, 131, 0.6);
+  border-style: outset;
+}
+
+.selected.dokidoki {
+  background: rgb(248, 103, 131);
+  border-style: inset;
+}
+
+.step.free {
+  border: 3px solid rgb(71, 209, 222, 0.6);
+  border-style: outset;
+}
+
+.selected.free {
+  background: rgb(71, 209, 222);
+  border-style: inset;
+}
+
+.step.hxh {
+  border: 3px solid rgb(81, 145, 78, 0.6);
+  border-style: outset;
+}
+
+.selected.hxh {
+  background: rgb(81, 145, 78);
   border-style: inset;
 }
